@@ -2,6 +2,8 @@ dpkg (1.14.16.5) UNRELEASED; urgency=low
 
   * Fix dpkg-gensymbols handling of #include so that one can include multiple
     times the same file and have it properly taken into account.
+  * Add many armel-specific symbols to dpkg-gensymbols' blacklist.
+    Closes: #462318
 
  -- Raphael Hertzog <hertzog@debian.org>  Thu, 24 Jan 2008 11:27:05 +0100
 
